--- a/public/css/Component/Animation/main.css
+++ b/public/css/Component/Animation/main.css
@@ -54,3 +54,10 @@
         transform: translateX(0);
     }
 }
+
+@keyframes slideDown {
+    to {
+        width: 500px;
+        height: 50%;
+    }
+}
