--- a/public/css/Component/Collector/Collector_Reuqest_Assigned.css
+++ b/public/css/Component/Collector/Collector_Reuqest_Assigned.css
@@ -1,4 +1,4 @@
-.CenterManager_Request_Assinged {
+.Collector_Reuqest_Assigned {
     .main-right-bottom-two {
         width: 99%;
         height: 550px;
@@ -7,54 +7,39 @@
         align-items: center;
         justify-content: center;
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-
     }
 
-    .main-right-bottom-three {
-        display: flex;
-        justify-content: center;
-        height: 550px;
-    }
-
-    .main-right-bottom-three-content {
-
-        border-radius: 10px;
-        display: flex;
+    .main-right-bottom-one {
+        display: none;
         flex-direction: column;
-        align-items: center;
-
-    }
-
-
-    .main-right-bottom-three-content img {
-        width: 450px;
-        height: 450px;
-    }
-
-    .main-right-bottom-three-content h1 {
-        font-size: 25px;
-        font-weight: 500;
-        margin-top: 20px;
+        height: 550px;
+        display: flex;
     }
 
     .main-right-bottom {
         flex-direction: column;
         height: 550px;
-        display: none;
+        display: flex;
+    }
+
+    .map-locations {
+        width: 85%;
+        height: 90%;
+        border-radius: 10px;
     }
 
     .table-row {
         font-size: 1px;
         font-family: Montserrat;
         text-align: center;
-        height: 65px;
+        height: 52px;
         display: grid;
-        grid-template-columns: 11% 10% 9% 13% 14% 12% 17% 13%;
+        grid-template-columns: 11% 10% 9% 13% 10% 12% 17% 9% 9%;
         border-bottom: 2px solid #CACACA;
     }
 
     .table td {
-        height: 65px;
+        height: 50px;
         font-size: 15.5px;
         vertical-align: middle;
         text-align: center;
@@ -70,10 +55,12 @@
         text-align: center;
         height: 55px;
         display: grid;
-        grid-template-columns: 11% 10% 9% 13% 14% 12% 17% 13%;
+        grid-template-columns: 11% 10% 9% 13% 10% 12% 17% 9% 9%;
     }
 
-
+    td img {
+        margin: 7px;
+    }
 
     .Location {
         display: flex;
@@ -88,6 +75,15 @@
         justify-content: center;
     }
 
+    .complete_image {
+        width: 27px;
+        height: 27px;
+    }
+
+    td img {
+        cursor: pointer;
+    }
+
     .Location-content {
         background-color: white;
         width: 65%;
@@ -99,10 +95,29 @@
         color: #2B2B2B;
     }
 
-    .map-locations {
-        width: 85%;
-        height: 90%;
+    .main-right-bottom-three {
+        display: flex;
+        justify-content: center;
+        height: 550px;
+    }
+
+    .main-right-bottom-three-content {
         border-radius: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+
+    .main-right-bottom-three-content img {
+        width: 450px;
+        height: 450px;
+    }
+
+    .main-right-bottom-three-content h1 {
+        font-size: 25px;
+        font-weight: 500;
+        margin-top: 20px;
     }
 
     .cancel-confirm {
@@ -119,7 +134,8 @@
     }
 
     .cancel-confirm-content {
-        width: 500px;
+        width: 0px;
+        height: 0px;
         background: white;
         font-family: 'poppins', sans-serif;
         border-radius: 6px;
@@ -131,6 +147,22 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        position: relative;
+        animation: slideDown 0.5s ease-out forwards;
+    }
+
+    .cancel-confirm-top-close {
+        margin-bottom: 25px;
+    }
+
+    .cancel-confirm-top-close img {
+        display: none;
+    }
+
+    .cancel-confirm-content h1 {
+        font-size: 32px;
+        font-weight: 500;
+        display: none;
     }
 
     .cancel-confirm-content input {
@@ -142,19 +174,17 @@
         font-size: 20px;
         border-radius: 5px;
         border: 1px solid black;
+        display: none;
     }
 
-    .cancel-confirm-content h1 {
-        font-size: 32px;
-        font-weight: 500;
+    .cancel-confirm-content-warning {
+        width: 100px;
+        height: 100px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        display: none;
     }
 
-    .confim-cancel-content-box {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: row;
-    }
 
     .cancel-confirm-content button {
         width: 200px;
@@ -168,13 +198,7 @@
         margin-top: 10px;
         background-color: #74b9ff;
         cursor: pointer;
-    }
-
-    .cancel-confirm-content-warning {
-        width: 100px;
-        height: 100px;
-        margin-top: 10px;
-        margin-bottom: 10px;
+        display: none;
     }
 
     .cancel-confirm-top-close {
@@ -187,4 +211,5 @@
     .cancel-confirm-top-close img {
         cursor: pointer;
     }
+
 }
