--- a/public/css/Component/Collector/Collector_Reuqest_Assigned.css
+++ b/public/css/Component/Collector/Collector_Reuqest_Assigned.css
@@ -13,7 +13,6 @@
         display: none;
         flex-direction: column;
         height: 550px;
-        display: flex;
     }
 
     .main-right-bottom {
@@ -146,60 +145,82 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
         position: relative;
         animation: slideDown 0.5s ease-out forwards;
     }
 
-    .cancel-confirm-top-close {
-        margin-bottom: 25px;
-    }
 
-    .cancel-confirm-top-close img {
+    .cancel-confirm-content h2 {
+        font-size: 23px;
+        font-weight: 600;
+        margin-bottom: 5px;
         display: none;
     }
 
-    .cancel-confirm-content h1 {
-        font-size: 32px;
-        font-weight: 500;
+    .cancel-confirm-content img {
+        width: 100px;
+        margin-top: 28px;
+        margin-bottom: 15px;
+        border-radius: 50%;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        display: none;
+    }
+
+    .cancel-confirm-content p {
         display: none;
     }
 
     .cancel-confirm-content input {
         width: 70%;
-        height: 40px;
-        margin-bottom: 10px;
-        margin: 12px;
         text-align: center;
-        font-size: 20px;
+        font-size: 17px;
         border-radius: 5px;
         border: 1px solid black;
-        display: none;
-    }
-
-    .cancel-confirm-content-warning {
-        width: 100px;
-        height: 100px;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        display: none;
-    }
-
-
-    .cancel-confirm-content button {
-        width: 200px;
-        height: 35px;
-        font-size: 18px;
-        border-radius: 5px;
         display: flex;
-        align-items: center;
-        justify-content: center;
-        border: none;
-        margin-top: 10px;
-        background-color: #74b9ff;
-        cursor: pointer;
+        margin-top: 18px;
+        outline: none;
         display: none;
     }
+
+    .cancel-confirm-content input:focus {
+        border: 2px solid green;
+        outline: none;
+    }
+
+    .btns {
+        display: none;
+        flex-direction: row;
+        align-items: center;
+        margin-top: 16px;
+    }
+
+    .deletebtn {
+        width: 150px;
+        margin-right: 20px;
+        padding: 10px 0;
+        background: rgb(220, 39, 39);
+        color: white;
+        border: 0;
+        outline: none;
+        font-size: 18px;
+        border-radius: 4px;
+        cursor: pointer;
+        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    .cancelbtn {
+        width: 150px;
+        padding: 10px 0;
+        background: #bab3b3;
+        color: white;
+        border: 0;
+        outline: none;
+        font-size: 18px;
+        border-radius: 4px;
+        cursor: pointer;
+        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+    }
+
 
     .cancel-confirm-top-close {
         display: flex;
