--- a/public/css/Component/Collector/Collector_Request_Cancelled.css
+++ b/public/css/Component/Collector/Collector_Request_Cancelled.css
@@ -2,38 +2,43 @@
     .table-row {
         font-size: 1px;
         font-family: Montserrat;
-        text-align: center;
+        text-align: left;
         height: 52px;
         display: grid;
         border-bottom: 2px solid #CACACA;
-        grid-template-columns: 11% 20% 14% 25% 40%;
+        grid-template-columns: 11% 10% 15% 15% 19% 40%;
 
     }
+
+
 
     .table td {
         height: 50px;
         font-size: 15.5px;
-        vertical-align: middle;
-        text-align: center;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+
+
     }
 
     .table-header {
         background-color: #B9FFB7;
         font-size: 17px;
         font-family: Montserrat;
-        text-align: center;
         height: 55px;
-        display: grid;
-        grid-template-columns: 11% 20% 14% 25% 40%;
+
+        grid-template-columns: 11% 10% 15% 15% 19% 40%;
+    }
+
+    .table th {
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
     }
 
     td img {
         width: 25px;
         height: 25px;
+        cursor: pointer;
     }
 
 
