--- a/public/css/Component/Admin/Admin_Center_Add.css
+++ b/public/css/Component/Admin/Admin_Center_Add.css
@@ -74,6 +74,10 @@
         width: 85%;
     }
 
+    .main-bottom-down-down-content-maps {
+        display: flex;
+    }
+
     .main-bottom-down-down-content input {
         height: 40px;
         width: 100%;
@@ -221,4 +225,111 @@
         font-size: 16px;
     }
 
+    /*  maps  */
+    .main-bottom-maps {
+        display: flex;
+        width: 100px;
+        justify-content: center;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        padding: 7px;
+        align-items: center;
+        cursor: pointer;
+    }
+
+    .main-bottom-map-success {
+        display: flex;
+        text-align: center;
+        flex-direction: row;
+        margin-left: 14px;
+        align-items: center;
+        padding-top: 23px;
+    }
+
+    .main-bottom-map-success p {
+        font-size: 14px;
+        margin-left: 7px;
+        margin-top: 7px;
+    }
+
+    .main-bottom-map-success img {
+        width: 23px;
+        height: 23px;
+    }
+
+    .main-bottom-maps img {
+        width: 40px;
+        height: 40px;
+    }
+
+    .main-bottom-maps h4 {
+        font-weight: 500;
+        font-size: 17px;
+        margin-right: 8px;
+    }
+
+    /*  ---------  */
+    /* map*/
+    .map_pop {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.7);
+        z-index: 1;
+        display: none;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    #map {
+        width: 75%;
+        height: 75%;
+        border: 2px solid #3498db;
+        border-radius: 10px;
+        margin-bottom: 15px;
+    }
+
+    .buttons-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 30%;
+        background-color: #2c3e50;
+
+    }
+
+    #markLocationBtn,
+    #cancelBtn {
+        padding: 10px 20px;
+        width: 200px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 16px;
+        margin: 4px;
+        transition: background-color 0.3s ease;
+    }
+
+    #markLocationBtn {
+        background-color: #3498db;
+        color: #fff;
+        width: 200px;
+        margin: 4px;
+    }
+
+    #cancelBtn {
+        background-color: #e74c3c;
+        color: #fff;
+    }
+
+    #markLocationBtn:hover,
+    #cancelBtn:hover {
+        background-color: #2c3e50;
+    }
+
+
+    /* --------- */
 }
