--- a/public/css/Component/Admin/Admin_Center_View.css
+++ b/public/css/Component/Admin/Admin_Center_View.css
@@ -21,6 +21,13 @@
         padding-left: 1%;
     }
 
+    .table-header th {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+
     .table-header {
         background-color: #B9FFB7;
         font-size: 17px;
@@ -28,14 +35,7 @@
         text-align: center;
         height: 55px;
         display: grid;
-        grid-template-columns: 15% 12% 12% 12% 17% 12% 10% 10%;
-    }
-
-    .table-header th {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
+        grid-template-columns: 10% 12% 12% 12% 22% 12% 10% 10%;
     }
 
     .table-row {
@@ -44,10 +44,8 @@
         text-align: center;
         height: 52px;
         display: grid;
-        grid-template-columns: 15% 12% 12% 12% 17% 12% 10% 10%;
+        grid-template-columns: 10% 12% 12% 12% 22% 12% 10% 10%;
         border-bottom: 2px solid #CACACA;
-
-
     }
 
     .table td {
@@ -71,17 +69,50 @@
         cursor: pointer;
     }
 
+    /*Location Pop*/
+    .location_pop_content {
+        width: 70%;
+        height: 78%;
+        padding: 10px;
+        background-color: #f1f2f6;
+        border-radius: 10px;
+        padding: 20px;
+        padding-bottom: 40px;
+    }
+
+    .location_pop_map {
+        width: 100;
+        height: 100%;
+        border-radius: 10px;
+    }
+
+    .location_close {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 6px;
+    }
+
+    .location_close button {
+        background-color: #ff4757;
+        height: 28px;
+        color: #fff;
+        cursor: pointer;
+        border: none;
+        font-size: 16px;
+        border-radius: 5px;
+        width: 85px;
+    }
+
+    /* ------ */
     @media screen and (max-width: 1118px) {
         .main-right-top-one-content {
             width: 250px;
             margin-left: 1%;
-
         }
 
         .table td {
-
             font-size: 12px;
-
         }
 
         .table-header {
@@ -91,11 +122,7 @@
         .table-row img {
             width: 20px;
             height: 20px;
-
         }
-
-
-
     }
 
     @media screen and (max-width:862px) {
@@ -142,12 +169,8 @@
     }
 
     @media screen and (max-width: 692px) {
-
-
         .table td {
-
             font-size: 9px;
-
         }
 
         .table-header {
@@ -157,15 +180,11 @@
         .table-row img {
             width: 15px;
             height: 15px;
-
         }
 
         .main-right-bottom {
             width: 140%;
         }
-
-
-
     }
 
     .center_delete {
@@ -198,7 +217,6 @@
 
     .popup p {
         margin-top: 10px;
-
     }
 
     .btns {
