--- a/public/css/Component/CenterManager/CenterManager_Collector.css
+++ b/public/css/Component/CenterManager/CenterManager_Collector.css
@@ -309,37 +309,37 @@
         display: flex;
         align-items: center;
         justify-content: center;
-    
+
     }
-    
+
     .main-right-bottom-two-content {
         width: 55%;
         height: 95%;
         display: flex;
         flex-direction: column;
         align-items: center;
-        
+
     }
-    
-    
+
+
     .main-right-bottom-two-content img {
         width: 450px;
         height: 450px;
-        
+
     }
-    
+
     .main-right-bottom-two-content h1 {
         font-size: 23px;
         color: #333;
         font-weight: 550;
     }
-    
-    .main-right-bottom-two-content p{
+
+    .main-right-bottom-two-content p {
         font-size: 18px;
         margin-top: 7px;
         color: #7c7c7d;
     }
-    
+
     .main-right-bottom-two-content button {
         height: 42px;
         width: 200px;
@@ -356,8 +356,8 @@
         margin-bottom: 20px;
         margin-top: 20px;
     }
-    
-    
+
+
     .main-right-bottom-two-content button:hover {
         background: rgb(28, 79, 64);
     }
@@ -865,6 +865,7 @@
         justify-content: center;
         width: 100%;
         height: 100%;
+        display: none;
 
     }
 
@@ -892,6 +893,7 @@
         right: 10px;
         width: 20px;
         height: 20px;
+        cursor: pointer;
     }
 
     .vehicle-details-popup {
