--- a/public/css/Component/Customer/Customer_Request_Ongoing.css
+++ b/public/css/Component/Customer/Customer_Request_Ongoing.css
@@ -29,7 +29,7 @@
 }
 
 .table-header {
-    background-color: #A1FFAF;
+    background-color: #ecf0f1;
     font-size: 17px;
     font-family: Montserrat;
     text-align: center;
@@ -51,7 +51,7 @@
     height: 65px;
     display: grid;
     grid-template-columns: 10% 12% 12% 10% 13% 10% 12% 11% 10%;
-    border-bottom: 2px solid #CACACA;
+    border-bottom: 2px solid #ecf0f1;
 }
 
 .table td {
@@ -64,61 +64,24 @@
     justify-content: center;
 }
 
+/* body tr:nth-child(even) {
+    background-color: #e8edee;
+}
+
+body tr:nth-child(odd) {
+    background-color: ffff;
+} */
+
 .table-row .cancel-open img {
     width: 27px;
     height: 27px;
     cursor: pointer;
 }
 
-/* .main-right-bottom-two {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.main-right-bottom-two-content {
-    width: 55%;
-    height: 93%;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-
-.main-right-bottom-two-content img {
-    width: 550px;
-    height: 550px;
-}
-
-.main-right-bottom-two-content h1 {
-    font-size: 25px;
-    font-weight: 500;
-}
-
-.main-right-bottom-two-content button {
-    height: 42px;
-    width: 300px;
-    outline: none;
-    color: white;
-    font-size: 19px;
-    font-weight: 500;
-    border-radius: 5px;
-    cursor: pointer;
-    border: none;
-    letter-spacing: 1px;
-    background: #1B6652;
-    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
-    margin-bottom: 20px;
-    margin-top: 20px;
-} */
-
 .main-right-bottom-two {
     display: flex;
     align-items: center;
     justify-content: center;
-
 }
 
 .main-right-bottom-two-content {
@@ -127,14 +90,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    
 }
 
 
 .main-right-bottom-two-content img {
     width: 450px;
     height: 450px;
-   
 }
 
 .main-right-bottom-two-content h1 {
@@ -143,7 +104,7 @@
     font-weight: 550;
 }
 
-.main-right-bottom-two-content p{
+.main-right-bottom-two-content p {
     font-size: 18px;
     margin-top: 7px;
     color: #7c7c7d;
@@ -166,11 +127,9 @@
     margin-top: 20px;
 }
 
-
 .main-right-bottom-two-content button:hover {
     background: rgb(28, 79, 64);
 }
-
 
 .processing {
     width: 35px;
@@ -196,7 +155,7 @@
 
 .bold2 {
     font-weight: bold;
-    background-color: #f8a5c2;
+    background-color: #A1FFAF;
     padding: 6px;
     border-radius: 10px;
 }
