--- a/public/css/Component/Customer/Customer_Request_Completed.css
+++ b/public/css/Component/Customer/Customer_Request_Completed.css
@@ -31,7 +31,7 @@
     }
 
     .table-header {
-        background-color: #A1FFAF;
+        background-color: #ecf0f1;
         font-size: 17px;
         font-family: Montserrat;
         text-align: center;
