--- a/public/css/Component/CenterManager/CenterManager_Request_Incomming.css
+++ b/public/css/Component/CenterManager/CenterManager_Request_Incomming.css
@@ -23,12 +23,10 @@
     }
 
     .main-right-bottom-three-content {
-
         border-radius: 10px;
         display: none;
         flex-direction: column;
         align-items: center;
-
     }
 
 
@@ -42,8 +40,6 @@
         font-weight: 500;
         margin-top: 20px;
     }
-
-
 
     .map-locations {
         width: 85%;
@@ -72,7 +68,7 @@
     }
 
     .table-header {
-        background-color: #B9FFB7;
+        background-color: #ecf0f1;
         font-size: 17px;
         font-family: Montserrat;
         text-align: center;
