--- a/public/css/Component/Collector/Collector_Request_Cancelled.css
+++ b/public/css/Component/Collector/Collector_Request_Cancelled.css
@@ -15,7 +15,7 @@
     }
 
     .table-header {
-        background-color: #B9FFB7;
+        background-color: #ecf0f1;
         font-size: 17px;
         font-family: Montserrat;
         height: 55px;
@@ -51,8 +51,8 @@
     }
 
     .location_pop_content {
-        width: 70%;
-        height: 78%;
+        width: 47%;
+        height: 55%;
         padding: 10px;
         background-color: #f1f2f6;
         border-radius: 10px;
