--- a/public/css/Component/Collector/Collector_Reuqest_Assigned.css
+++ b/public/css/Component/Collector/Collector_Reuqest_Assigned.css
@@ -3,14 +3,14 @@
         width: 99%;
         height: 550px;
         padding-left: 1%;
-        display: flex;
+        display: none;
         align-items: center;
         justify-content: center;
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     }
 
     .main-right-bottom-one {
-        display: none;
+        display: flex;
         flex-direction: column;
         height: 550px;
     }
@@ -48,7 +48,7 @@
     }
 
     .table-header {
-        background-color: #B9FFB7;
+        background-color: #ecf0f1;
         font-size: 17px;
         font-family: Montserrat;
         text-align: center;
