--- a/public/css/Component/Customer/Customer_Request_collect.css
+++ b/public/css/Component/Customer/Customer_Request_collect.css
@@ -281,10 +281,13 @@
     }
 
     #map {
-        width: 80%;
-        height: 80%;
-        border: 2px solid #3498db;
+        width: 55%;
+        height: 55%;
+        padding: 10px;
+        background-color: #f1f2f6;
         border-radius: 10px;
+        padding: 20px;
+        padding-bottom: 40px;
     }
 
     .buttons-container {
