--- a/public/css/Component/CenterManager/CenterManager_CenterWorker.css
+++ b/public/css/Component/CenterManager/CenterManager_CenterWorker.css
@@ -13,6 +13,13 @@
 
     }
 
+    .main-top-component img {
+        width: 50px;
+        height: 50px;
+        margin-left: 15px;
+        border-radius: 50%;
+    }
+
     .table {
         padding-left: 1%;
         width: 99%;
@@ -122,9 +129,10 @@
     }
 
     .main-top-component img {
-        width: 40px;
-        height: 40px;
+        width: 50px;
+        height: 50px;
         margin-left: 15px;
+        border-radius: 50%;
     }
 
     .main-top-component p {
