--- a/public/css/Component/CenterManager/CenterManager_Collector.css
+++ b/public/css/Component/CenterManager/CenterManager_Collector.css
@@ -45,9 +45,10 @@
     }
 
     .main-top-component img {
-        width: 40px;
-        height: 40px;
+        width: 50px;
+        height: 50px;
         margin-left: 15px;
+        border-radius: 50%;
     }
 
     .main-top-component p {
@@ -159,7 +160,7 @@
         text-align: center;
         height: 55px;
         display: grid;
-        grid-template-columns: 12.5% 14.5% 16% 15% 12.5% 12.5% 8% 8%;
+        grid-template-columns: 11.5% 9.5% 19% 19% 12.5% 12.5% 7.5% 7.5%;
     }
 
     .table-header th {
@@ -175,7 +176,7 @@
         text-align: center;
         height: 100px;
         display: grid;
-        grid-template-columns: 12.5% 14.5% 16% 15% 12.5% 12.5% 8% 8%;
+        grid-template-columns: 11.5% 9.5% 19% 19% 12.5% 12.5% 7.5% 7.5%;
         border-bottom: 2px solid #CACACA;
     }
 
