--- a/public/css/Component/Customer/Customer_History_Top.css
+++ b/public/css/Component/Customer/Customer_History_Top.css
@@ -1,4 +1,14 @@
 .Customer_History_Top {
+    #history {
+        background: #1B6652;
+        background-color: rgba(27, 102, 82, 0.4);
+    }
+
+    #history .main-left-middle-content-line {
+        background: #1B6652;
+        background: radial-gradient(82.23% 108.11% at 101.39% 101.07%, #13C93E 0%, #ADE446 100%);
+    }
+
     .main-right {
         display: grid;
         width: 100%;
