--- a/public/css/Component/Customer/Customer_Complains.css
+++ b/public/css/Component/Customer/Customer_Complains.css
@@ -8,246 +8,61 @@
         font-family: Inter;
     }
 
-    .main {
-        width: 100%;
-        height: 731px;
-        display: grid;
-        grid-template-rows: 10% 90%;
-    }
 
-    .main-top {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        font-family: Inter;
-        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    }
-
-    .main-top img {
-        width: 32px;
-        height: 32px;
-        margin-left: 30px;
-    }
-
-    .main-top-component {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        margin-right: 20px;
-    }
-
-    .main-top-component img {
-        width: 55px;
-        height: 55px;
-        margin-left: 30px;
-        border-radius: 50%;
-    }
-
-    .main-top-component p {
-        font-size: 18px;
-        font-family: inter;
-        letter-spacing: 0.1px;
-    }
-
-    .back_button {
-        cursor: pointer;
-    }
-
-    .main-bottom {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .main-bottom-component {
-        width: 65%;
-        height: 80%;
-        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-        border-radius: 10px;
-        padding: 40px;
-        display: grid;
-        grid-template-columns: 50% 50%;
-    }
-
-
-    .main-bottom-component-right {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-    }
-
-    .main-bottom-component-right img {
-        width: 100%;
-        height: 100%;
-        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-        border-radius: 10px;
-    }
-
-    .main-bottom-component-left {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .main-bottom-component-left-topic {
-        margin-bottom: 15px;
-    }
-
-    .line {
-        height: 4px;
-        width: 60px;
+    #dashboard {
         background: #1B6652;
-        margin-top: 3px;
+        background-color: rgba(27, 102, 82, 0.4);
     }
 
-    .main-bottom-component-left-topic h2 {
-        font-size: 24px;
-        font-weight: 500;
-    }
-
-    .main-bottom-component-left-component {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .main-bottom-component-left-component {
-        display: flex;
-        flex-direction: column;
-        margin-bottom: 5px;
-    }
-
-    .main-bottom-component-left-component h2 {
-        font-weight: 500;
-        margin-bottom: 5px;
-        font-size: 17px;
-        margin-bottom: 7px;
-    }
-
-    .main-bottom-component-left-component h4 {
-        font-weight: 500;
-        margin-bottom: 5px;
-        font-size: 20px;
-        margin-bottom: 7px;
-    }
-
-    .main-bottom-component-left-component input {
-        height: 32px;
-        width: 80%;
-        outline: none;
-        border-radius: 5px;
-        border: 1px solid #ccc;
-        padding-left: 15px;
-        font-size: 16px;
-        border-bottom-width: 2px;
-        transition: all 0.3s ease;
-        margin-bottom: 6px;
-    }
-
-    .main-bottom-component-left-component input:focus {
-        border-color: #4dccaa;
-    }
-
-    .complain {
-        height: 66px !important;
-    }
-
-    .err {
-        height: 10px;
-        font-size: 15px;
-        font-weight: 500;
-        margin-bottom: 5px;
-        color: #e74c3c;
-    }
-
-    .main-bottom-component-left-button {
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        margin-top: 5px;
-    }
-
-    .main-bottom-component-left button {
-        height: 42px;
-        width: 83%;
-        outline: none;
-        color: white;
-        font-size: 18px;
-        font-weight: 500;
-        border-radius: 5px;
-        cursor: pointer;
-        border: none;
-        letter-spacing: 1px;
+    #dashboard .main-left-middle-content-line {
         background: #1B6652;
-        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+        background: radial-gradient(82.23% 108.11% at 101.39% 101.07%, #13C93E 0%, #ADE446 100%);
     }
 
-
-    /*Success popup*/
-    .center_worker_success {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.5);
-        z-index: 1;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: 100%;
+    .main-right {
+        display: grid;
+        grid-template-rows: 9.5% 90.5%;
     }
 
-    .popup {
-        width: 400px;
-        background: white;
-        font-family: 'poppins', sans-serif;
-        border-radius: 6px;
-        text-align: center;
-        padding: 0 30px 30px;
-        color: #333;
-        transition: transform 0.4s, top 0.4s;
-    }
+    .main-right {
+        .main-top {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            font-family: Inter;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        }
 
-    .open-popup {
-        visibility: visible;
-        top: 50%;
-        transform: translate(-50%, -50%) scale(1);
-    }
+        .main-top img {
+            width: 32px;
+            height: 32px;
+            margin-left: 30px;
+        }
 
-    .popup img {
-        width: 100px;
-        margin-top: 35px;
-        border-radius: 50%;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    }
+        .main-top-component {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            margin-right: 16.55px;
+        }
 
-    .popup h2 {
-        font-size: 38px;
-        font-weight: 500;
-        margin: 10px 0 10px;
-    }
+        .main-top-component img {
+            width: 55px;
+            height: 55px;
+            margin-left: 30px;
+            border-radius: 50%;
+        }
 
-    .popup button {
-        width: 100%;
-        margin-top: 30px;
-        padding: 10px 0;
-        background: #6fd649;
-        color: white;
-        border: 0;
-        outline: none;
-        font-size: 18px;
-        border-radius: 4px;
-        cursor: pointer;
-        box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
-    }
+        .main-top-component p {
+            font-size: 18px;
+            font-family: inter;
+            letter-spacing: 0.1px;
+        }
 
-
-    @media screen and (max-width: 1142px) {
-        .main-bottom-right {
-            display: none;
+        .back_button {
+            cursor: pointer;
         }
 
         .main-bottom {
@@ -256,38 +71,233 @@
             justify-content: center;
         }
 
-        .main-bottom-left-component h2 {
-            font-size: 20px;
-        }
-
-        .main-bottom-left-component button {
-            width: 180px;
-            height: 45px;
-            margin-left: 50px;
-            margin-right: 50px;
-        }
-
-        .main-bottom-left {
-            width: 60%;
-        }
-    }
-
-    @media screen and (max-width: 950px) {
         .main-bottom-component {
+            width: 65%;
+            height: 80%;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            padding: 40px;
+            display: grid;
+            grid-template-columns: 50% 50%;
+        }
 
+
+        .main-bottom-component-right {
             display: flex;
             align-items: center;
             justify-content: center;
         }
 
-
-        .main-bottom-component-right {
-            display: none;
-
+        .main-bottom-component-right img {
+            width: 100%;
+            height: 100%;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
         }
 
         .main-bottom-component-left {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .main-bottom-component-left-topic {
+            margin-bottom: 15px;
+        }
+
+        .line {
+            height: 4px;
+            width: 60px;
+            background: #1B6652;
+            margin-top: 3px;
+        }
+
+        .main-bottom-component-left-topic h2 {
+            font-size: 24px;
+            font-weight: 500;
+        }
+
+        .main-bottom-component-left-component {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .main-bottom-component-left-component {
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 5px;
+        }
+
+        .main-bottom-component-left-component h2 {
+            font-weight: 500;
+            margin-bottom: 5px;
+            font-size: 17px;
+            margin-bottom: 7px;
+        }
+
+        .main-bottom-component-left-component h4 {
+            font-weight: 500;
+            margin-bottom: 5px;
+            font-size: 20px;
+            margin-bottom: 7px;
+        }
+
+        .main-bottom-component-left-component input {
+            height: 32px;
+            width: 80%;
+            outline: none;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+            padding-left: 15px;
+            font-size: 16px;
+            border-bottom-width: 2px;
+            transition: all 0.3s ease;
+            margin-bottom: 6px;
+        }
+
+        .main-bottom-component-left-component input:focus {
+            border-color: #4dccaa;
+        }
+
+        .complain {
+            height: 66px !important;
+        }
+
+        .err {
+            height: 10px;
+            font-size: 15px;
+            font-weight: 500;
+            margin-bottom: 5px;
+            color: #e74c3c;
+        }
+
+        .main-bottom-component-left-button {
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            margin-top: 5px;
+        }
+
+        .main-bottom-component-left button {
+            height: 42px;
+            width: 83%;
+            outline: none;
+            color: white;
+            font-size: 18px;
+            font-weight: 500;
+            border-radius: 5px;
+            cursor: pointer;
+            border: none;
+            letter-spacing: 1px;
+            background: #1B6652;
+            box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+        }
+
+
+        /*Success popup*/
+        .center_worker_success {
+            position: fixed;
+            top: 0;
+            left: 0;
             width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            z-index: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            height: 100%;
+        }
+
+        .popup {
+            width: 400px;
+            background: white;
+            font-family: 'poppins', sans-serif;
+            border-radius: 6px;
+            text-align: center;
+            padding: 0 30px 30px;
+            color: #333;
+            transition: transform 0.4s, top 0.4s;
+        }
+
+        .open-popup {
+            visibility: visible;
+            top: 50%;
+            transform: translate(-50%, -50%) scale(1);
+        }
+
+        .popup img {
+            width: 100px;
+            margin-top: 35px;
+            border-radius: 50%;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .popup h2 {
+            font-size: 38px;
+            font-weight: 500;
+            margin: 10px 0 10px;
+        }
+
+        .popup button {
+            width: 100%;
+            margin-top: 30px;
+            padding: 10px 0;
+            background: #6fd649;
+            color: white;
+            border: 0;
+            outline: none;
+            font-size: 18px;
+            border-radius: 4px;
+            cursor: pointer;
+            box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+        }
+
+
+        @media screen and (max-width: 1142px) {
+            .main-bottom-right {
+                display: none;
+            }
+
+            .main-bottom {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+
+            .main-bottom-left-component h2 {
+                font-size: 20px;
+            }
+
+            .main-bottom-left-component button {
+                width: 180px;
+                height: 45px;
+                margin-left: 50px;
+                margin-right: 50px;
+            }
+
+            .main-bottom-left {
+                width: 60%;
+            }
+        }
+
+        @media screen and (max-width: 950px) {
+            .main-bottom-component {
+
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+
+
+            .main-bottom-component-right {
+                display: none;
+
+            }
+
+            .main-bottom-component-left {
+                width: 100%;
+            }
         }
     }
 }
