--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,6 +52,7 @@
 @import url('Component/Collector/Collector_Request_Top.css');
 @import url('Component/Collector/Collector_Reuqest_Assigned.css');
 @import url('Component/Collector/Collector_Request_Cancelled.css');
+@import url('Component/Collector/Collector_Request_Completed.css');
 
 @import url('Component/Collector/Collector_Editprofile.css');
 /* Center Manager CSS */
