--- a/public/css/Component/CenterManager/CenterManager_Request_Assinged.css
+++ b/public/css/Component/CenterManager/CenterManager_Request_Assinged.css
@@ -411,5 +411,48 @@
 
     }
 
+
+
+    .eco-credit-popup {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background: #fff;
+        padding: 20px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+        z-index: 9999;
+    }
+    
+    .popup-content {
+        text-align: center;
+    }
+    
+    .popup-content h2 {
+        font-size: 24px;
+        margin-bottom: 10px;
+    }
+    
+    .popup-content p {
+        font-size: 18px;
+        margin-bottom: 20px;
+    }
+    
+    .button-container {
+        display: flex;
+        justify-content: center;
+    }
+    
+    .button-container button {
+        padding: 10px 20px;
+        margin: 0 10px;
+        cursor: pointer;
+        border-radius: 5px;
+        border: none;
+        color: white;
+        background-color: #2ecc71; /* Green OK button */
+    }
+    
+
     /* ------------*/
 }
